--- a/Week_7_NodeJS/Day_2/DailyChallenge/package.json
+++ b/Week_7_NodeJS/Day_2/DailyChallenge/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.16"
   }
