--- a/Week_7_NodeJS/Day_1/ExercisesXP_Ninja/ex3/package.json
+++ b/Week_7_NodeJS/Day_1/ExercisesXP_Ninja/ex3/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.16",
-    "prompt-sync": "^4.2.0"
+    "nodemon": "^2.0.16"  
   }
 }
