--- a/Week_7_NodeJS/Day_2/ExercisesXP_Gold/package.json
+++ b/Week_7_NodeJS/Day_2/ExercisesXP_Gold/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dailychallenge",
+  "name": "exercisesxp_gold",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
