--- a/Week_7_NodeJS/Day_4/MiniProject_loginAndRegister/package.json
+++ b/Week_7_NodeJS/Day_4/MiniProject_loginAndRegister/package.json
@@ -2,16 +2,22 @@
   "name": "miniproject_loginandregister",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "knex": "^2.1.0",
+    "nodemon": "^2.0.16",
+    "p4ssw0rd": "^1.0.7",
+    "path": "^0.12.7",
+    "pg": "^8.7.3"
   }
 }
